fix / voice: notifications position overlaps

--- a/public/css/components/post-details/post-detail.less
+++ b/public/css/components/post-details/post-detail.less
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.85);
-  z-index: 2;
+  z-index: 3;
 }
 
 .cv-post-detail__header {
