--- a/public/css/components/sidebar.less
+++ b/public/css/components/sidebar.less
@@ -15,7 +15,7 @@
   left: -(@cv-sidebar-width - @cv-sidebar-collapsed-width);
   bottom: 0;
   overflow: hidden;
-  z-index: 2;
+  z-index: 3;
   width: @cv-sidebar-width;
   background-color: @color-neutral-xxx-dark;
   transform: translateZ(0);
